<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/simple_english_words_wallpapers_960x800"
    tools:context="com.diplomnew.app.MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_words"
            android:id="@+id/btnWords"
            android:textStyle="bold"
            android:textSize="50dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center">

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/twenty_five_frames"
            android:id="@+id/btnTwentyFiveFrame"
            android:layout_marginBottom="25dp"
            android:textStyle="bold" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/bilateral_cards"
            android:id="@+id/btnBilateralCards"
            android:layout_marginBottom="20dp"
            android:textStyle="bold" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/associated_cards"
            android:id="@+id/btnAssociatedCards"
            android:layout_marginBottom="25dp"
            android:textStyle="bold" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/statistics"
            android:id="@+id/btnStatistics"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
